Fix opaque background in embedded checkouts in dark mode

--- a/clients/apps/web/src/styles/globals.css
+++ b/clients/apps/web/src/styles/globals.css
@@ -262,7 +262,7 @@
     @apply text-gray-200;
   }
 
-  #polar-embed-layout {
+  html:has(#polar-embed-layout) {
     color-scheme: normal;
   }
 
